añado ejercicio m73exe1

--- a/m73exe1/Modul73exe1.html
+++ b/m73exe1/Modul73exe1.html
@@ -19,10 +19,14 @@
     4.- Cercle
     
     Segons l’opció escollida haurà d’introduir unes dades o altres perquè el programa mostri per pantalla l’àrea (el valor) del polígon escollit.</h3>   
-    <input type="radio" name="boton"> Cuadrado<br>
-    <input type="radio" name="boton"> Triángulo<br>
-    <input type="radio" name="boton"> Rectángulo<br>
-    <input type="radio" name="boton"> Circulo
+    <input type="submit" value="cuadrado" onclick="getSquare()"><br>
+    <input type="submit" value="triangulo" onclick="getTriangle()"><br>
+    <input type="submit" value="rectangulo" onclick="getRectangle()"><br>
+    <input type="submit" value="circulo" onclick="getCircle()"> 
+    <p id="square"></p>
+    <p id="triangle"></p>
+    <p id="rectangle"></p>
+    <p id="circle"></p>
      
  </body>
 </html>
